# src/swagger/swagger-output.json
@@ -108,6 +108,32 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "objToCreate",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Jhon Doe"
+                },
+                "age": {
+                  "type": "number",
+                  "example": 29
+                },
+                "about": {
+                  "type": "string",
+                  "example": ""
+                }
+              },
+              "required": [
+                "name",
+                "age"
+              ]
+            }
           }
         ],
         "responses": {
